
syntax ="proto3";

message CreateTX {
    bytes Address =1;
    int32 Amount =2;
    string Data =3;
    bytes CreatorPubKey =4;
    bytes CreatorSig =5;
}

message TransferOwners{
    string Address =1;
    int32 Output =2;
    int32 Threshold =3;
    repeated bytes Owners =4;
    repeated bytes PrevOwnerSigs=5;
    bytes PopcodePubKey =6;
    bytes PopcodeSig=7;
}

message Unitize{
    int32 SourceOutput=2;
    bytes DestAddress=3;
    repeated bytes DestAmounts =4;
    repeated bytes OwnerSigs =5;
    bytes PopcodePubKey =6;
    bytes PopcodeSig =7;
}

message Combine{
    string Address =1;
    repeated CombineSources sources=2; 
    bytes CreatorPubKey =3;
    bytes CreatorSig =4;
    repeated bytes OwnerSigs =5;
    bytes PopcodeSigs =6;
    
}

message CombineSources{
 int32 SourceOutput =1;
 int32 SourceAmount =2;
}